# -Real-Time-Edge-Detection-Viewer

./: README.md
app/src/main/cpp/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  androidopencvdemo.cpp
app/src/main/java/com/example/androidopencvdemo/: YuvToRgbConverter.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
